--- a/src/index.css
+++ b/src/index.css
@@ -66,7 +66,6 @@ code {
 /* Add Task Css */
 
 .AddParent-container {
-  margin-top: 48px;
   display: flex;
   flex-direction: column;
   gap: 16px;
@@ -324,3 +323,22 @@ code {
 .dropdown-list-item:hover {
   background-color: #f2f2f2;
 }
+
+.mandatory-msg {
+
+  font-size: 14px;
+  font-weight: 400;
+  color: gray;
+  text-align: left;
+  padding-left: 20px;
+}
+
+.error-msg {
+  color: red;
+  margin: 10px 0;
+  text-align: left;
+  padding-left: 20px;
+  font-size: 14px;
+  font-weight: 400;
+}
+
